[package]
name = "posix-resources"
version = "0.2.0"
authors = ["Jake O'Shannessy <joshannessy@gmail.com>"]
edition = "2018"
description = "Higher level bindings to POSIX resources via the libc crate."
repository = "https://github.com/JakeOShannessy/rs-posix-resources.git"
homepage = "https://github.com/JakeOShannessy/rs-posix-resources"
license = "MIT OR Apache-2.0"

[dependencies]
libc = "0.2"
